@@ -1,4 +1,4 @@
-package com.example.organdonationmanagement.security;
+package com.example.organdonationmanagement.service;
 
 import com.example.organdonationmanagement.entity.User;
 import com.example.organdonationmanagement.repository.UserRepository;
@@ -6,29 +6,28 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
-
     private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String username)
-            throws UsernameNotFoundException {
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("User không tồn tại"));
 
-        User user = userRepository.findByUsername(username);
-
-        if (user == null) {
-            throw new UsernameNotFoundException("User not found");
-        }
+        // CHỈNH SỬA TẠI ĐÂY:
+        // 1. user.getRole().name() để chuyển từ Enum sang String
+        // 2. Thêm "ROLE_" vào trước để Spring Security hiểu đó là một Role
+        String roleName = "ROLE_" + user.getRole().name();
 
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                List.of(new SimpleGrantedAuthority(user.getRole().name()))
+                Collections.singletonList(new SimpleGrantedAuthority(roleName))
         );
     }
 }
+
